Change size of first-letter to avoid overflow in notices

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -699,7 +699,7 @@ article blockquote:before {
 }
 article:first-letter {
 	float:left;
-	font-size:5em;
+	font-size:3.5em;
 	line-height:1;
 	margin:0 .2em 0 0;
 	vertical-align:top;
